--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,13 @@ ksp-version = '1.8.10-1.0.9'
 retrofit-version = '2.9.0'
 okhttp-version = '5.0.0-alpha.2'
 
+# Coil
+coil-version = '2.4.0'
+
+# Chart
+vico-chart-version = '1.6.5'
+ycharts-version = '2.1.0'
+
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -29,6 +36,7 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 ui = { group = "androidx.compose.ui", name = "ui" }
+ui-util = { group = "androidx.compose.ui", name = "ui-util"}
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -63,17 +71,15 @@ hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref =
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-version" }
 # Dagger
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt-version" }
-hilt-dagger-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt-version" }
+hilt-dagger-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "dagger-hilt-version" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "dagger-hilt-version" }
+
 
 # Timber
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber-version" }
 
-# Dependencies of the included build-logic
-android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
-kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlin-serialization-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-serialization", version.ref = "kotlin" }
-hilt-gradlePlugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "dagger-hilt-version" }
+# Coil
+coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-version"}
 
 # Retrofit
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit-version"}
@@ -81,14 +87,20 @@ retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-gson"
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp-version"}
 okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref="okhttp-version"}
 
+#Chart API
+ychart = { group = "co.yml", name = "ycharts", version.ref = "ycharts-version"}
+
+vico-core = { group = "com.patrykandpatrick.vico", name = "core", version.ref = "vico-chart-version"}
+vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico-chart-version"}
+vico-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico-chart-version"}
+
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 android-test = { id = "com.android.test", version.ref = "agp" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-kotlin-parcelize = { id = "kotlin-parcelize", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt-version" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp-version" }
 kotlin-kapt = { id = "kotlin-kapt", version.ref = "kotlin" }
